rust/crates/rax/src/text/rules/snapshots/rax__string__rules__until_char__tests__ascii_keep_left.snap
---
source: crates/rax/src/string/rules/until_char.rs
expression: result
---
Ok(
    (
        "abc-",
        "def",
    ),
)
